--- a/todo
+++ b/todo
@@ -1,2 +1,3 @@
-1. Добавить всплывашку над курсором, после завершения выделения текста (как в опере)
-    >> На случай какой-то хитрой блокировки ctrl+c или пкм
+0. Убрать богомерзкий бутстрап из зависимостей
+1. Причесать код
+2. Добавить вебпак
